<resources>
    <string name="app_name">GithubSertification</string>
    <string name="txt_name">Name</string>
    <string name="txt_username">Username</string>
    <string name="txt_imageview">ImageView</string>
    <string name="txt_follower">Follower</string>
    <string name="txt_following">Following</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
</resources>