<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvImageItemUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivItemUser"
                    android:layout_width="@dimen/_50dp"
                    android:layout_height="@dimen/_50dp"
                    android:contentDescription="@string/txt_imageview"
                    app:layout_constraintEnd_toStartOf="@+id/tvNameItem"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvNameItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:text="@string/txt_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                app:layout_constraintStart_toEndOf="@+id/cvImageItemUser"
                app:layout_constraintTop_toTopOf="@+id/cvImageItemUser" />

            <TextView
                android:id="@+id/tvUsernameItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:text="@string/txt_username"
                app:layout_constraintBottom_toBottomOf="@+id/cvImageItemUser"
                app:layout_constraintStart_toEndOf="@+id/cvImageItemUser"
                app:layout_constraintTop_toBottomOf="@+id/tvNameItem" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>